imrpove logging, equals and toString for inMemory graph componetns, new data version